Fixed the issue that video cannot be played by other app by using a FIleProvider

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,17 @@
         </activity>
         <activity android:name=".CameraActivity" />
         <activity android:name=".CameraFilterActivity" android:screenOrientation="portrait"/>
+
+        <!--To open video files using other apps through sharing uri-->
+        <provider
+            android:name="android.support.v4.content.FileProvider"
+            android:authorities="game.is.life.videofilter.provider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+                android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/provider_paths"/>
+        </provider>
     </application>
 
 </manifest>
