--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,8 +29,10 @@ dependencies {
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
-    compile 'com.jakewharton:butterknife:6.1.0' //dependency injection
-    compile 'net.steamcrafted:materialiconlib:1.1.3' // icons
+
+    compile 'com.jakewharton:butterknife:6.1.0' //dependency/View injection
+    compile 'net.steamcrafted:materialiconlib:1.1.3' // icon resources
+    compile 'de.hdodenhof:circleimageview:2.1.0' // round image view
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.3.1'
 }
