--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.jakewharton:butterknife:6.1.0' //dependency/View injection
     compile 'net.steamcrafted:materialiconlib:1.1.3' // icon resources
     compile 'de.hdodenhof:circleimageview:2.1.0' // round image view
+//    compile 'fr.avianey.com.viewpagerindicator:library:2.4.1.1@aar' //horizontal view pager indicator
     testCompile 'junit:junit:4.12'
     compile 'com.android.support:cardview-v7:25.3.1'
 }
