Added player activity using Exoplayer Deleted external player intent

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 
     <application
         android:allowBackup="true"
@@ -24,11 +24,15 @@
             </intent-filter>
         </activity>
         <activity android:name=".CameraActivity" />
-        <activity android:name=".CameraFilterActivity"
+        <activity
+            android:name=".CameraFilterActivity"
             android:screenOrientation="portrait"
+            android:theme="@style/AppTheme.NoActionBar" />
+        <activity android:name=".PlayerActivity"
             android:theme="@style/AppTheme.NoActionBar"/>
 
-        <!--To open video files using other apps through sharing uri-->
+
+        <!-- To open video files using other apps through sharing uri -->
         <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="game.is.life.videofilter.provider"
@@ -36,7 +40,7 @@
             android:grantUriPermissions="true">
             <meta-data
                 android:name="android.support.FILE_PROVIDER_PATHS"
-                android:resource="@xml/provider_paths"/>
+                android:resource="@xml/provider_paths" />
         </provider>
     </application>
 
