--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,15 +25,21 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile project(':shadercam')
+
+    //dependency/View injection
+    // icon resources
+    // round image view
+
+    //video player
+//    compile 'fr.avianey.com.viewpagerindicator:library:2.4.1.1@aar' //horizontal view pager indicator
     compile 'com.android.support:appcompat-v7:25.3.1'
     compile 'com.android.support:recyclerview-v7:25.3.1'
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:design:25.3.1'
-
-    compile 'com.jakewharton:butterknife:6.1.0' //dependency/View injection
-    compile 'net.steamcrafted:materialiconlib:1.1.3' // icon resources
-    compile 'de.hdodenhof:circleimageview:2.1.0' // round image view
-//    compile 'fr.avianey.com.viewpagerindicator:library:2.4.1.1@aar' //horizontal view pager indicator
-    testCompile 'junit:junit:4.12'
+    compile 'com.jakewharton:butterknife:6.1.0'
+    compile 'net.steamcrafted:materialiconlib:1.1.3'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
+    compile 'com.google.android.exoplayer:exoplayer:r2.4.1'
     compile 'com.android.support:cardview-v7:25.3.1'
+    testCompile 'junit:junit:4.12'
 }
